<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorMain"
    tools:context="com.digiparking.android.digiparking.LoginActivity"
    android:weightSum="1">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.04">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginLeft="105dp"
                android:layout_marginStart="105dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/digiparking1" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:gravity="center"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="-10dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:background="@color/colorWhite"
                    android:hint="@string/prompt_password"
                    android:gravity="center"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorGreyBlack"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorGreyWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/inscription_hypertext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/inscription_hypertext"
                android:textAlignment="center"
                android:textColor="@color/colorGreyWhite"
                android:textSize="15sp"

                />

        </LinearLayout>
</LinearLayout>
