<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.digiparking.android.digiparking.VoitureDetailActivity"
    tools:showIn="@layout/activity_voiture_detail">

    <ImageView
        android:id="@+id/voiture_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorGreyWhite"
        android:src="@drawable/ic_voiture_img"
        android:contentDescription="@string/voiture_image" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/voiture_marque"
                android:textSize="20sp"/>

        <TextView
                android:id="@+id/voiture_marque"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/voiture_modele"
                android:textSize="20sp"/>

        <TextView
                android:id="@+id/voiture_modele"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="155dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:text="@string/voiture_immatriculation"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/voiture_immatriculation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/voiture_detail_btn_validation"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/colorMain"
        android:text="@string/valider"
        android:textColor="@color/colorGreyWhite"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:visibility="invisible"/>
</LinearLayout>
